# foodgram-project-react

./: .gitignore  README.md  docker-compose.yml  pytest.ini
.github/workflows/: codestyle.yml  coverage.yaml  foodgram_workflow.yaml
backend/: Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
backend/foodgram/: Dockerfile  requirements.txt  settings.py  test.py  urls.py
backend/foodgram/foodgram/: settings.py  urls.py
backend/foodgram/recipes/: filters.py  models.py
backend/foodgram/recipes/migrations/: 0001_initial.py
backend/foodgram/recipes/tests/: test_views.py
backend/foodgram/users/: models.py  views.py
backend/recipes/: admin.py  factories.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/recipes/migrations/: 0001_initial.py  0002_auto_20210802_1459.py
backend/recipes/tests/: factories.py  test_urls.py  test_views.py
backend/templates/: user_reset_password.html
backend/users/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
backend/users/management/commands/: filldb.py
backend/users/migrations/: 0001_initial.py
backend/users/tests/: factories.py  test_urls.py  test_views.py
frontend/: .dockerignore  docker-compose.yml
infra/: docker-compose.yml  nginx.conf
test/: docker-compose.yml  nginx.conf
